# NXCommon

./: CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: NXCommonConfig.cmake.in  NXCommon_export_extra.hpp  Utility.cmake
src/NX/Common/: Any.hpp  Array.hpp  Bit.hpp  BoundingBox.hpp  DataVector.hpp  NXConstants.hpp  NXRange.cpp  NXRange.hpp  NXRange2D.cpp  NXRange2D.hpp  NXRange3D.cpp  NXRange3D.hpp  Point2D.hpp  Point3D.hpp  Range.cpp  Range.hpp  Range2D.cpp  Range2D.hpp  Range3D.cpp  Range3D.hpp  Ray.hpp  Result.hpp  RgbColor.hpp  StringLiteral.hpp  TypesUtility.hpp  Uuid.cpp  Uuid.hpp
src/NXCommon/: Array.hpp  Bit.hpp  BoundingBox.hpp  EulerAngle.hpp  NXConstants.hpp  NXRange.cpp  NXRange.hpp  NXRange2D.cpp  NXRange2D.hpp  NXRange3D.cpp  NXRange3D.hpp  Numbers.hpp  Point3D.hpp  Ray.hpp  Result.hpp  RgbColor.cpp  RgbColor.hpp  ScopeGuard.hpp  StringLiteral.hpp  TypeTraits.hpp  Types.hpp  TypesUtility.hpp  Uuid.hpp
test/: BitTest.cpp  CMakeLists.txt  UuidTest.cpp
